<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/grad"
    tools:context="com.sadeny.style.Login_Activity"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/ico"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="phone"
        android:digits="0123456789+"
        android:maxLines="1"
        android:hint="@string/phone"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"/>

    <Button android:background="@drawable/but_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/loginButton"
        android:layout_marginBottom="20dp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prRegister"
        android:textSize="20dp"
        android:gravity="center"
        android:id="@+id/register"/>

</LinearLayout>