<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/grad"
    tools:context="com.sadeny.style.Register_Activity"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/ico"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:id="@+id/username"
        android:inputType="phone"
        android:maxLines="1"
        android:hint="@string/phone"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:hint="@string/repassword"
        android:layout_marginBottom="10dp"/>

    <Button android:background="@drawable/but_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="#fff"
        android:id="@+id/registerButton"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prLogin"
        android:textSize="20dp"
        android:gravity="center"
        android:id="@+id/tvRegister"/>

</LinearLayout>